# py-inteface

./: .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  LICENSE  README.md  pyproject.toml  setup.py
src/: lib.cpp  lib.rs
src-bk/py_fibonacci/: config.py  fibonacci.py
src/fibonacci/: __init__.py  _core.pyi  config.py  fibonacci.py
tests/: test_fibonacci.py
