[project]
name = "fibonacci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "KenHino", email = "hinomarubento@outlook.com" }
]
requires-python = ">=3.12"
dependencies = []

[tool.maturin]
module-name = "fibonacci._core"
python-packages = ["fibonacci"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "ipython>=8.30.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]
